# cv-lab-2

./: CMakeLists.txt  README.md
include/: lib.h
src/: main.cpp
